fix string unwrapping

--- a/src/components/Content/components/SearchFilters/index.css
+++ b/src/components/Content/components/SearchFilters/index.css
@@ -1,6 +1,5 @@
 .search-filters {
-  background-color: white;
-  border-radius: 4px;
+  white-space: nowrap;
 }
 
 .search-filters > .search-filters-header {
